# mathl

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  linear_algebra.rs  mat.rs  vec.rs
src/test/: mod.rs
