[package]
name = "mathl"
version = "0.0.1b"
authors = ["Samantha Enders <ladysamantha@protonmail.com>"]
description = "A math library for Rust. The goal is to use this with rhai"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ladysamantha/mathl.git"
homepage = "https://github.com/ladysamantha/mathl"

[dependencies]
